--- a/src/container/start/Start.scss
+++ b/src/container/start/Start.scss
@@ -7,13 +7,11 @@ $root: ".start-screen";
     width: 100vw;
     height: 100vh;
     background-image: url("../../assets/img/start_bg.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: center;
     position: relative;
 
     .direction-board {
@@ -39,7 +37,6 @@ $root: ".start-screen";
     font-weight: 600;
     letter-spacing: 0.2em;
     color: $primary-bg-color;
-    padding-top: 1em;
     text-align: center;
     text-shadow: 1px 1px 1px $primary-bg-shadow, 1px 2px 1px $primary-bg-shadow,
       1px 3px 1px $primary-bg-shadow, 1px 4px 1px $primary-bg-shadow,
@@ -52,9 +49,25 @@ $root: ".start-screen";
 
   &_menu {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: baseline;
-    position: relative;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 5em;
+
+    .btn-group-lg > .btn,
+    .btn-lg {
+      width: 14em;
+      margin: 0.2em;
+    }
+    .btn.disabled,
+    .btn:disabled {
+      opacity: 1;
+    }
+
+    .info-icon {
+      width: 1.2em;
+      margin-left: 0.2em;
+      cursor: pointer;
+    }
   }
 }
