--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,3 +1,9 @@
 $default_text_color: rgba(0, 0, 0, 0.87);
 $primary-bg-color: #f5f5f5;
 $primary-bg-shadow: #919191;
+$background: #f5f6fa;
+$text: #9c9c9c;
+$input-bg-color: #fff;
+$input-text-color: #a3a3a3;
+$button-bg-color: #7f8ff4;
+$button-text-color: #fff;
