--- a/src/container/start/Start.scss
+++ b/src/container/start/Start.scss
@@ -38,13 +38,7 @@ $root: ".start-screen";
     letter-spacing: 0.2em;
     color: $primary-bg-color;
     text-align: center;
-    text-shadow: 1px 1px 1px $primary-bg-shadow, 1px 2px 1px $primary-bg-shadow,
-      1px 3px 1px $primary-bg-shadow, 1px 4px 1px $primary-bg-shadow,
-      1px 5px 1px $primary-bg-shadow, 1px 6px 1px $primary-bg-shadow,
-      1px 7px 1px $primary-bg-shadow, 1px 8px 1px $primary-bg-shadow,
-      1px 9px 1px $primary-bg-shadow, 1px 10px 1px $primary-bg-shadow,
-      1px 18px 6px rgba(16, 16, 16, 0.4), 1px 22px 10px rgba(16, 16, 16, 0.2),
-      1px 25px 35px rgba(16, 16, 16, 0.2), 1px 30px 60px rgba(16, 16, 16, 0.4);
+    text-shadow: $text-shadow;
   }
 
   &_menu {
@@ -68,6 +62,7 @@ $root: ".start-screen";
       width: 1.2em;
       margin-left: 0.2em;
       cursor: pointer;
+      margin-bottom: 1px;
     }
   }
 }
