--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -7,3 +7,21 @@ $input-bg-color: #fff;
 $input-text-color: #a3a3a3;
 $button-bg-color: #7f8ff4;
 $button-text-color: #fff;
+$box-shadow-color: rgba(0, 0, 0, 0.2);
+$input-field-bg-color: #eee;
+$input-field-border-color: #8b8a8b;
+$popup-bg-color: rgba(0, 0, 0, 0.4);
+$popup-content-bg: #fefefe;
+$popup-border-color: #888;
+$close_btn-color: #aaaaaa;
+$close-btn-hover-color: #000;
+$error-msg-text-color: red;
+$top-score-color: gold;
+$loader-color: #3498db;
+$text-shadow: 1px 1px 1px $primary-bg-shadow, 1px 2px 1px $primary-bg-shadow,
+  1px 3px 1px $primary-bg-shadow, 1px 4px 1px $primary-bg-shadow,
+  1px 5px 1px $primary-bg-shadow, 1px 6px 1px $primary-bg-shadow,
+  1px 7px 1px $primary-bg-shadow, 1px 8px 1px $primary-bg-shadow,
+  1px 9px 1px $primary-bg-shadow, 1px 10px 1px $primary-bg-shadow,
+  1px 18px 6px rgba(16, 16, 16, 0.4), 1px 22px 10px rgba(16, 16, 16, 0.2),
+  1px 25px 35px rgba(16, 16, 16, 0.2), 1px 30px 60px rgba(16, 16, 16, 0.4);
