--- a/src/components/popup/Popup.scss
+++ b/src/components/popup/Popup.scss
@@ -1,52 +1,52 @@
-.popup {
-  display: block; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 200px; /* Location of the box */
+@import "../../style/variables";
+
+$root: ".popup";
+
+#{$root} {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  padding-top: 14.28em;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: $popup-bg-color;
 
-/* popup Content */
-.popup-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  border-radius: 5px;
-  max-height: 500px;
-  max-width: 350px;
-  overflow-y: auto;
-  
-}
+  &-content {
+    background-color: $popup-content-bg;
+    margin: auto;
+    padding: 1.42em;
+    border: 1px solid $popup-border-color;
+    border-radius: 5px;
+    max-height: 35.71em;
+    max-width: 25em;
+    overflow-y: auto;
+  }
 
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
+  .close {
+    color: $close_btn-color;
+    float: right;
+    font-size: 2em;
+    font-weight: bold;
+  }
 
-.heading {
-  text-align: center;
-  font-size: 30px;
-  letter-spacing: 2px;
-}
+  .heading {
+    text-align: center;
+    font-size: 2rem;
+    letter-spacing: 2px;
+  }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
+  .close:hover,
+  .close:focus {
+    color: $close-btn-hover-color;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
-::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; /* make scrollbar transparent */
+  ::-webkit-scrollbar {
+    width: 0em;
+    background: transparent; /* make scrollbar transparent */
+  }
 }
