--- a/src/container/game/Game.scss
+++ b/src/container/game/Game.scss
@@ -46,6 +46,10 @@ $root: ".snake-game";
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding: 3em;
+    background-color: #444a3f;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px 0 $box-shadow-color;
   }
   &_board {
     background-image: url("../../assets/img/snake-board-bg.jpg");
