--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -5,8 +5,8 @@ $root: ".loader";
 #{$root} {
   &_spin {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 45%;
+    left: 45%;
     transform: translate(-50%, -50%);
     border: 0.7em solid $background;
     border-radius: 50%;
@@ -24,6 +24,7 @@ $root: ".loader";
     width: 100%;
     height: 100vh;
     background-color: $default_text_color;
+    opacity: 0.6;
     z-index: 9;
   }
 
