--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -25,3 +25,10 @@ $text-shadow: 1px 1px 1px $primary-bg-shadow, 1px 2px 1px $primary-bg-shadow,
   1px 9px 1px $primary-bg-shadow, 1px 10px 1px $primary-bg-shadow,
   1px 18px 6px rgba(16, 16, 16, 0.4), 1px 22px 10px rgba(16, 16, 16, 0.2),
   1px 25px 35px rgba(16, 16, 16, 0.2), 1px 30px 60px rgba(16, 16, 16, 0.4);
+$primary-font-family:'moonhouse';
+
+  @font-face {
+    font-family: 'moonhouse';
+    src: local('moonhouse'),
+      url('../assets/fonts/Moonhouse-yE5M.ttf') format('woff');
+  }
